--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <hr>
     <a href="working.html">WORKING</a>
     <a href="downloads.html">DOWNLOADS</a>
-    <a href="">GITHUB</a>
+    <a href="https://github.com/vilekk/virtualmouse0.1">GITHUB</a>
     <a href="contacts.html">Contact us</a>
 </body>
 </html>
