--- a/downloads.html
+++ b/downloads.html
@@ -15,7 +15,7 @@
         <tr>
             <td>0.1</td>
             <td>Working Mouse</td>
-            <td><a href="">Download</a></td>
+            <td><a href="https://drive.google.com/file/d/1g3qOkr2Qu40FjYaF2iiGZOuwSFRTZS26/view?usp=share_link">Download</a></td>
         </tr>
         <tr>
             <td>0.2</td>
