--- a/downloads.html
+++ b/downloads.html
@@ -20,12 +20,12 @@
         <tr>
             <td>0.2</td>
             <td>Fixed Frame Rate, Smooth Working, Less Lag</td>
-            <td><a href="">Download</a></td>
+            <td><a href="https://drive.google.com/file/d/1g3qOkr2Qu40FjYaF2iiGZOuwSFRTZS26/view?usp=share_link">Download</a></td>
         </tr>
         <tr>
             <td>0.3</td>
             <td>Added Right Click, Scroll up, Scroll Down, etc.,</td>
-            <td><a href="">Download</a></td>
+            <td><a href="https://drive.google.com/file/d/1g3qOkr2Qu40FjYaF2iiGZOuwSFRTZS26/view?usp=share_link">Download</a></td>
         </tr>
     </table>
 </body>
